kubernetes/apps/outline/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: outline
    app.kubernetes.io/instance: outline
    app.kubernetes.io/name: outline
  name: outline
  namespace: outline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
        app.kubernetes.io/name: outline
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: outlinewiki/outline:0.84.0
        name: outline
