kubernetes/apps/outline/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outline
  namespace: outline
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.f9.casa`)
      kind: Rule
      services:
        - name: outline
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
